# swfdec__swfdec-gnome

./: .gitignore  AUTHORS  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  swfdec-player.desktop.in  swfdec.xml
data/: Makefile.am  swfdec-player.1  swfdec-player.desktop.in  swfdec-thumbnailer.1  swfdec.xml.in
player/: Makefile.am  swfdec-player.c  swfdec-player.ui  swfdec-window-handlers.c  swfdec-window.c  swfdec-window.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  fr.po
src/: Makefile.am  swfdec-thumbnailer.c  swfdec-thumbnailer.schemas.in
thumbnailer/: Makefile.am  swfdec-thumbnailer.c  swfdec-thumbnailer.schemas.in
